--- a/index.html
+++ b/index.html
@@ -51,14 +51,19 @@
 
     <!-- end google chart -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+    <!-- <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css"> -->
+    <!-- lets use netdna! -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css"> -->
+    <!-- <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script> -->
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <!-- <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script> -->
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Droid+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
-<!--    <meta charset="utf-8">
+    <link rel="stylesheet" href="bootstrap-glyphicons.css">
+    <!--    <meta charset="utf-8">
     <link type="text/css" rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css"> -->
     <style type="text/css">
       /* large desktop */
@@ -140,6 +145,9 @@
       .footer a {
         color: #ccccff;
       }
+      .navbar {
+	margin-bottom: 30px;
+      }
       /* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */
       div.addthis_toolbox {
 	width: 180px;
@@ -161,17 +169,17 @@
     </script>
   </head>
   <body>
-    <!-- mobile-friendly navbar adapted from example. -->
-    <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
-    <div class="navbar nvabar-inverse navbar-fixed-top">
+    <!-- mobile-friendly navbar adapted from example. 
+    <!- http://twitter.github.io/bootstrap/examples/starter-template.html ->
+    <div class="nav nvabar-inverse navbar-fixed-top">
       <div class="navbar-inner">
 	<div class="container">
-	  <button type="button" class="btn btn-navnbar" data-toggle="collapse" data-target=".nav-collapse">
+	  <button type="button" class="btn navbar-btn" data-toggle="collapse" data-target=".nav-collapse">
 	    <span class="icon-bar"></span>
 	    <span class="icon-bar"></span>
 	    <span class="icon-bar"></span>
 	  </button>
-	  <a class="brand" href="#">Bitstarter</a>
+	  <a class="navbar-brand" href="#">Yeetta Mon</a>
 	  <div class="nav-collapse collapse">
 	    <ul class="nav">
 	      <li class="active"><a href="#">Home</a></li>
@@ -182,68 +190,108 @@
 	</div>
       </div>
     </div>
+    -->
 
+    <!-- new nav bar with bs3, based on https://github.com/twbs/bootstrap-examples/blob/master/justified-nav -->
+    <div class="container">
+      <div class="navbar">
+        <div class="container">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Yeetta Mon</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Services by Yeetta <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="http://www.yeettadns.com/">DNS</a></li>
+                  <!--<li><a href="#">Interactive slides</a></li>
+                  <li><a href="#">Something else here</a></li> -->
+                  <li class="divider"></li>
+                  <li class="nav-header">The Company</li>
+                  <li><a href="http://www.yeetta.com/">Mothership Yeetta</a></li>
+                  <!-- <li><a href="#">One more separated link</a></li> -->
+                </ul>
+              </li>
+            </ul>
+            <!-- <ul class="nav navbar-nav pull-right">
+              <li class="active"><a href="/navbar/">Default</a></li>
+              <li><a href="/navbar-static-top/">Static top</a></li>
+              <li><a href="/navbar-fixed-top/">Fixed top</a></li>
+            </ul> -->
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+    <div class="container">
     <!-- We use row-fluid inside containers to achieve a resizable layout. -->
     <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
     <!-- http://stackoverflow.com/a/12270322/ -->
+    <!-- for bs3 changed row-fluid to row as per http://www.bootply.com/migrate-to-bootstrap-3 -->
     <div class="container">
       <!-- font and paired font of .heading/.subheading and boody from google fonts -->
       <!-- www.google.com/fonts/specimen/Ubuntu -->
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
-      <div class="row-fluid heading">
-        <div class="span12">
+      <div class="row heading">
+        <div class="col-sm-12">
 	  <h1>Yeetta Mon</h1>
 	</div>
       </div>
-      <div class="row-fluid subheading">
-	<div class="span12">
+      <div class="row subheading">
+	<div class="col-sm-12">
 	  <!-- special typography from Bootstrap for lead paragraph -->
 	  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
 	  <p class="lead">Service Monitoring Anywhere, Anytime, Anyway.</p>
 	</div>
       </div>
-      <div class="row-fluid pitch">
-	<div class="span5 offset1 video">
+      <div class="row pitch">
+	<div class="col-sm-5 col-offset-1 video">
 	  <!-- <img class="img-polaroid" src="http://placehold.it/480x300"> -->
 	  <p>Cloud based monitoring of all your servers and services. All vital data in one place.</p>
 	  <div id='chart_gauge'></div>
 	</div>
 	<!-- we define a new 'actions' div to contain statistics, order and share buttons -->
-	<div class="span5 actions">
-	  <div class="span8 offset2">
+	<div class="col-sm-5 actions">
+	  <div class="col-sm-8 col-offset-2">
 	    <div class="statistics">
-	      <div class="span4">
+	      <div class="col-sm-4">
 		<!-- linediv-l and linediv-r give dividing lines taht look different in hor and ver layouts, illustrating media queries -->
 		<div class="linediv-l">
 		  <h3>2</h3> <p>backers</p>
 		</div>
 	      </div>
-	      <div class="span4">
+	      <div class="col-sm-4">
 		<div class="linediv-c">
 		  <h3>$20</h3> <p>of $5,000</p>
 		</div>
 	      </div>
-	      <div class="span4">
+	      <div class="col-sm-4">
 		<div class="linediv-r">
 		  <h3>30</h3> <p>days left</p>
 		</div>
 	      </div>
 	    </div>
 	  </div>
-	  <div class="span10 offset1">
+	  <div class="col-sm-10 col-offset-1">
 	    <!-- bootstrap progress bar -->
 	    <!-- http://twitter.github.io/bootstrap/components.html#progress -->
 	    <div class="thermometer progress active">
-	      <div class="bar bar-success" style="width: 1%;"></div>
-	      <div class="bar bar-warning" style="width: 99%;"></div>
+	      <div class="progress-bar progress-bar-success" style="width: 1%;"></div>
+	      <div class="progress-bar progress-bar-warning" style="width: 99%;"></div>
 	    </div>
 	  </div>
-	  <div class="span6 offset3 order">
+	  <div class="col-sm-6 col-offset-3 order">
 	    <!-- bootstrap button -->
 	    <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
 	    <!-- <button class="btn btn-success btn-large">Back us now!</button> -->
 	  </div>
-	  <div class="span8 offset2 social">
+	  <div class="col-sm-8 col-offset-2 social">
 	    <!-- social buttons are not included in the default bootstrap -->
 	    <!-- see: http://noizwaves.github.io/bootstrap-social-buttons -->
 	    <a class="coinbase-button" 
@@ -271,14 +319,17 @@
       <!-- beyond this point the marketing copy begins. -->
       <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
       <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
-      <div class="row-fluid section1">
-	<div class="span5 offset1 asset">
+      <div class="row section1">
+	<div class="col-sm-5 col-offset-1 asset">
 	  <!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
+          <p><span class="glyphicon glyphicon-ok"></span></p>
+        <span class="glyphicon glyphicon-glass"></span>
+        <span class="glyphicon glyphicon-music"></span>
 	  <p>Choose your visualisations to represent your collected data.</p>
 	  <!-- <div id="chart_geo" style="width: 900px; height: 500px;"></div> -->
 	  <div id="chart_geo"></div>
 	</div>
-        <div class="span5 copy">
+        <div class="col-sm-5 copy">
 	  <p>
 	  Pledge $5 or more
 	  <p>
@@ -287,18 +338,18 @@
 	  </p>
 	</div>
       </div>
-      <div class="row-fluid section2">
- 	<div class="span5 offset1 copy copy-right">
+      <div class="row section2">
+ 	<div class="col-sm-5 col-offset-1 copy copy-right">
 	  <p>
 Yeetta Mon will provide you a central place for all your server and service metrics data. Standard monitoring is provided for your servers, CPU, Network and memory usage. But where Yeetta Mon comes really into play is to monitor how the world sees your services using advanced URL data retreival for your business critical services. For this purpose Yeetta Mon will have probes at strategic locations around the world.
 	  </p>
       </div>
-      <div class="span5 asset">
+      <div class="col-sm-5 asset">
 	<img class="img-polaroid" src="http://placehold.it/480x300">
       </div>
     </div>
-    <div class="row-fluid section1">
-      <div class="span10 offset1">
+    <div class="row section1">
+      <div class="col-sm-10 col-offset-1">
 	<h2>$5,000 pledge</h2>
 	<p>This will provide the basic infrastructure with probes in 3 locations (1 US, 2 Europa). A simple agent for Unix based servers and HTTP URL monitoring</p>
 	<h2>$12,000 pledge</h2>
@@ -310,8 +361,8 @@ Yeetta Mon will provide you a central place for all your server and service metr
     <!-- For the FAQ, we introduce a little bit of JS, using the accordian -->
     <!-- This brings in jquery.js and bootstrap.js as dependencies.-->
     <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->    
-    <div class="row-fluid faq">
-      <div class="span10 offset1">
+    <div class="row faq">
+      <div class="col-sm-10 col-offset-1">
 	  <h3>FAQ</h3>
 	  <div class="accordion" id="accordion2">
 	    <div class="accordion-group">
@@ -344,8 +395,8 @@ Yeetta Mon will provide you a central place for all your server and service metr
 
       <!-- CC By-SA 3.0 license -->
       <!-- http://creativecommons.org/licenses/ -->
-      <div class="row-fluid footer">
-	<div class="span12">
+      <div class="row footer">
+	<div class="col-sm-12">
 	  <p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>
 	  ,without all the cruft that would otherwise be put at the bottom of the page.</p>
 	</div>
